--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,9 @@ edition = "2021"
 anyhow = "1.0.75"
 lsp-server = "*"
 lsp-types = "*"
+reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+openssl = { version = "*", features = ["vendored"] }
+once_cell = "1.19.0"
