--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ openssl = { version = "0.10.63", features = ["vendored"] }
 once_cell = "1.19.0"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "
